Liams Scrollbar and fixed the close button again
???

--- a/GroupA.FolksOpinion.UI/Content/main.css
+++ b/GroupA.FolksOpinion.UI/Content/main.css
@@ -51,7 +51,7 @@ a {
 	position:                              absolute;
 	top:                                   0px;
 	left:                                  0px;
-	overflow:                              none;
+	overflow:                              hidden;
     text-shadow:                           0px 0px 7px rgba(0,0,0,0.75);
 }
 
@@ -117,7 +117,7 @@ a {
 #hashtagSelectionSidebar #closeHashtagSelectionSidebarButton {
 	position:                              absolute;
 	top:                                   55px;
-	right:                                 0px;
+	right:                                 45px;
 	opacity:                               0.9;
 }
 
